--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -38,9 +38,6 @@
     font-size: 30px;
     color: #FFFFFF;
 }
-.Contact-Card-Bottom {
-
-}
 .Contact-Card-Info {
     display: flex;
     align-items: center;
@@ -52,7 +49,7 @@
     width: 30px;
     margin-right: 20px;
 }
-.Contact-Card-Info p {
+.Contact-Card-Info a {
     font-family: 'Light';
     font-size: 23px;
     color: #FFFFFF;
