--- a/src/Components/Homepage.css
+++ b/src/Components/Homepage.css
@@ -10,6 +10,14 @@
     justify-content: center;
     flex-direction: column;
 }
+.Homepage-Logo {
+    position: absolute;
+    right: 20px;
+    top: 30px;
+}
+.Homepage-Logo img {
+    width: 225px;
+}
 /*Image + titles*/
 .Homepage-Photo-Titles {
     display: flex;
@@ -117,11 +125,11 @@
     justify-content: space-between;
     align-items: center;
 }
-/* @media only screen and (min-height: 1500px) {
-    .Homepage{
-        min-height: auto;
+@media only screen and (max-width: 1950px){
+    .Homepage-Logo img {
+        width: 175px;
     }
-} */
+}
 @media only screen and (max-width: 1950px) and (max-height: 950px){
     .Homepage-Photo-Titles {
         margin-bottom: 50px;
@@ -203,6 +211,15 @@
     }
 }
 @media only screen and (max-width: 800px) {
+    .Homepage-Logo {
+        position: relative;
+        right: auto;
+        top: auto;
+        margin-bottom: 20px;
+    }
+    .Homepage-Logo img {
+        width: 175px;
+    }
     .Homepage-Title-1 {
         font-size: 30px;
     }
